--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ baseurl: "" # the subpath of your site, e.g. /blog
 title: "" # the name of your site, e.g. ACME Corp.
 
 collections:
-  - projects
+  projects:
+    ouptut: true
